--- a/_posts/2020-04-30-may.md
+++ b/_posts/2020-04-30-may.md
@@ -13,7 +13,7 @@ fb-img: https://gyani.net/img/blog/monkey.png
 
 1. **Running** Running, I wanted to run a minimum of 87.42 km. Earlier in the month I was rather bullish and was expecting to run more but with the lock downs and the park closures, running took a hit. I ran just over the monthly minimum at 87.57 km. Prize here was jumping ropes. ✅
 
-2. **Weight** I started at 69.25 and I wanted to be 66.50. This afternoon, I weighed 68.50. That was after lunch though, I'd likely weigh less before lunch as a day before I was 67.9. Anywho, this is failure. This didn't work out, so I need to donate 50 quid to charity. ❌ 
+2. **Weight** I started at 69.25 and I wanted to be 66.50. This afternoon, I weighed 68.50. That was after lunch though, I'd likely weigh less before lunch as a day before I was 67.9. Any who, this is failure. This didn't work out, so I need to donate 50 quid to charity. ❌ 
 
 3. **Reading** I wanted to finish deaths end and 5 chapters of intelligent investor. This got done! I added a lamp as a mid month prize, I bought it before finishing the book. ✅
 
@@ -26,9 +26,9 @@ fb-img: https://gyani.net/img/blog/monkey.png
 
 Corona poses uncertainitiy. It really tests discipline. Sitting at home isn't great for weight loss. That in mind, here are Mays goals
 
-1. **Running** I want to run the daily minimum that's 2.914 a day so a total of 90.33400 km. I think this is ambitious enough given the lockdown and the heat outside. Win: Self Respect. Loss: 50 GBP Charity to a food/health charity
+1. **Running** I want to run the daily minimum that's 2.914 a day so a total of 90.33400 km. I think this is ambitious enough given the lock down and the heat outside. Win: Self Respect. Loss: 50 GBP Charity to a food/health charity
 
-2. **Weight** I'm at 68.5, but my without food weight is probably around 68.00. I want to get down to 66. That is ambitious, given Corona. I worry that if I don't set ambitious goals, I'll probably go over my current weight. How do I achieve this? I'll bring serious IF + 1500 again, I have been snacking outside of feeding hours. That needs to stop, new IF hours are 1pm to 9pm daily. I'll start sleeping on time, a fixed time. I plan on sleeping at 1 am and waking up at 9 am, every day for the rest of the month. Weekends included. Any time that I snack outside of 1pm and 9pm, I'll donate a meal on the Share The Plate App. Loss: 50 GBp to a food/health charity. Win: A Go Pro Hero 7
+2. **Weight** I'm at 68.5, but my without food weight is probably around 68.00. I want to get down to 66. That is ambitious, given Corona. I worry that if I don't set ambitious goals, I'll probably go over my current weight. How do I achieve this? I'll bring serious IF + 1500 again, I have been snacking outside of feeding hours. That needs to stop, new IF hours are 1pm to 9pm daily. I'll start sleeping on time, a fixed time. I plan on sleeping at 1 am and waking up at 9 am, every day for the rest of the month. Weekends included. Any time that I snack outside of 1 pm and 9 pm, I'll donate a meal on the Share The Plate App. Loss: 50 GBP to a food/health charity. Win: A Go Pro Hero 7
 
 3. **Reading** I started reading Liar Poker by Michael Lewis. I want to finish that. I also want to read 5 more chapters of Intelligent Investor. In addition I had started watching a lecture of Aswath Damodaran every weekend, I'll continue that. I want to get done with the tutorial series on Tailwind CSS and the basic tutorial on [React.com](https://reactjs.org/tutorial/tutorial.html). Loss: Donate 50 GBP to Khan Academy/ Wikipedia or equivalent. Win: A laptop sleeve.
 
@@ -36,7 +36,7 @@ Corona poses uncertainitiy. It really tests discipline. Sitting at home isn't gr
 
 5. **May Sky Challenge** Found this on Hackernews. Seemed interesting. Basically have to look at the Sky before looking at the phone on waking up. I'm in. No wins or losses here but I will share my success rate.
 
-6. **NTC** I want to do 3 NTC workouts every week. That's about 13 for this month. Success: More workout equipment. Loss: Weight/Food Charitym, the usual.
+6. **NTC** I want to do 3 NTC workouts every week. That's about 13 for this month. Success: More workout equipment. Loss: Weight/Food Charity, the usual.
 
 
 ## General
