--- a/_posts/2020-04-30-may.md
+++ b/_posts/2020-04-30-may.md
@@ -34,6 +34,8 @@ Corona poses uncertainitiy. It really tests discipline. Sitting at home isn't gr
 
 4. **Side Project** Not sure what to put here. For now lets say, release something in the wild with a frontend and a backend. It's tough to measure products in a month and have a goal for it. I'll probably come back to this tomorrow. I'm not sure what metrics to have. Number of users? Revenue? How do I do all of this in a month? So for now its vague, release a product for the world. I think having an MRR / active user count goal in the longer term is reasonable, so the goal here is to come up with a project scoped to a few months with a clear MRR/active user count goal. If I finish both these things, Win: A Herschel Backpack. Loss: 50 GBP Charity to Khan Academy / Wikipedia / Coding Group
 
+Side Project Idea: If I don't change it by end of day today, the side project is making a netlify clone. Essentially you write config on Github and your website gets hosted somewhere on a subdomain.
+
 5. **May Sky Challenge** Found this on Hackernews. Seemed interesting. Basically have to look at the Sky before looking at the phone on waking up. I'm in. No wins or losses here but I will share my success rate.
 
 6. **NTC** I want to do 3 NTC workouts every week. That's about 13 for this month. Success: More workout equipment. Loss: Weight/Food Charity, the usual.
