--- a/_posts/2020-05-31-june.md
+++ b/_posts/2020-05-31-june.md
@@ -22,7 +22,7 @@ May was fine. Running was consistent. I ran on 30 out of 31 days, all days excep
 
 6. **NTC**: I wanted to do 13 NTC workouts. I settled for 5 workouts and 8 rounds of skipping. The win was more workout equipment, will get a few running/workout t-shirts delivered. ✅
 
-![proof](/img/blog/june.jpg)
+![proof](/img/blog/june.png)
 
 If I don't end up narrowing down from the 2 ideas to 1 then I'll mark 4 as a failure. I have made a donation regardless.
 
