--- a/_posts/2020-05-31-june.md
+++ b/_posts/2020-05-31-june.md
@@ -8,7 +8,7 @@ fb-img: https://gyani.net/img/blog/monkey.png
 
 ## Retrospective
 
-May was fine. Running was consistent. I ran on 30 out of 31 days, all days except today. The workouts went as expected, I swapped some NTC sessions with jumping rope. Reading was consistent as well. There wasn't much action on the side project until recently. Anywho, here are the details
+May was fine. Running was consistent. I ran on 30 out of 31 days, all days except today. The workouts went as expected, I swapped some NTC sessions with jumping rope. Reading was consistent as well. There wasn't much action on the side project until recently. Any who, here are the details
 
 1. **Running**: I wanted to run 90.3340 km. I ran 95.44 km over 30 runs. The win was continued self respect, the loss was 50 bucks to charity. I guess I get to keep my self respect. ✅
 
@@ -24,17 +24,17 @@ May was fine. Running was consistent. I ran on 30 out of 31 days, all days excep
 
 ![proof](/img/blog/june.png)
 
-If I don't end up narrowing down from the 2 ideas to 1 then I'll mark 4 as a failure. I have made a donation regardless.
+~If I don't end up narrowing down from the 2 ideas to 1 then I'll mark 4 as a failure. I have made a donation regardless.~
 
 ## Month Planning
 
-1. **Running**: Have to keep up with the runnin goal for the year(1000km for those who just started reading this blog). Current daily minimum is 2.914 per day or a total of 87.42 km(goal). I rounded up to 3 per day for May, I'll try doing 4 per day and hit 120(beyond the goal). Win: The good feeling that comes from runinng. Loss: £50 to charity.
+1. **Running**: Have to keep up with the running goal for the year(1000 km for those who just started reading this blog). Current daily minimum is 2.914 per day or a total of 87.42 km(goal). I rounded up to 3 per day for May, I'll try doing 4 per day and hit 120(beyond the goal). Win: The good feeling that comes from running. Loss: £50 to charity.
 
-2. **Weight**: I am 65.35 kg today. I have run out of things I want to buy and I wanted to do longer term goals this time around. The current goal is to get down to 60 kg by the end of August. I need to lose about 2kg per month for the next three months to get there. Win: iPhone 12, if I get 60 kg. A cheat meal on every 2 kilos lost, and another at the end of a succesful month. Loss: £50 for every month that I don't get to the desired weight. Bonus: If I get to 59, I become eligible for the higher end of the iPhone 12 lineup.
+2. **Weight**: I am 65.35 kg today. I have run out of things I want to buy and I wanted to do longer term goals this time around. The current goal is to get down to 60 kg by the end of August. I need to lose about 2 kg per month for the next three months to get there. Win: iPhone 12, if I get 60 kg. A cheat meal on every 2 kilos lost, and another at the end of a successful month. Loss: £50 for every month that I don't get to the desired weight. Bonus: If I get to 59, I become eligible for the higher end of the iPhone 12 lineup.
 
 3. **Reading**: Start and finish Antifragile by Nassim Nicholas Taleb. Finish the remanining chapters of The Intelligent Investor. One Aswath Damodarn lecture every weekend. I want to get done with the Intelligent Investor so that I can start with the Site Reliability Engineering Handbook next month. Win: Book of choice. Loss: £50 to charity.
 
-4. **Side Projectg**: This is the part where I list the project mentioned in the 4th point in the retrospective section. Loss: £50 for the every month the goal isn't met. Win: Profits if any go to buying an audio system. An audio system is a nice to have and I don't want to add it as a win of an easy goal. This one is the most difficult goal in the list of goals
+4. **Side Project**: This is the part where I list the project mentioned in the 4th point in the retrospective section. Loss: £50 for the every month the goal isn't met. Win: Profits if any go to buying an audio system. An audio system is a nice to have and I don't want to add it as a win of an easy goal. This one is the most difficult goal in the list of goals. I have narrowed down on the project and done some planning around it and have some goals for myself. For now all I can say is, that we'll be releasing a beta in September hopefully. Dropped both of the ideas and picked a completely different one.
 
 5. **Nike Training Club**: Running is fine and dandy but I need to work out in addition to running. Like last month I am shooting for 12 Nike Training club trainings, but this time intermediate or higher levels. At most 6 may be replaced with jumping rope. An NTC workout can be replaced with time spent in an actual gym if they decide to open up. Win: Workout gear if needed. Loss: £50 for charity.
 
