--- a/_posts/2020-06-30-july.md
+++ b/_posts/2020-06-30-july.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: June
-subtitle: .. almost half of the year is gone
-tags: [accountability, june]
+title: July
+subtitle: .. so far so good
+tags: [accountability, july]
 fb-img: https://gyani.net/img/blog/monkey.png
 ---
 
