--- a/_posts/2020-06-30-july.md
+++ b/_posts/2020-06-30-july.md
@@ -42,4 +42,4 @@ June was fine! Ran 29 out of 30 days but met my goal and my stretch goal. NTC wa
 
 5. **Finish Horizon: Zero Dawn**: I want to finish the game so that I can get Ghost of Tsushima when its out.
 
-6. **Blogpost:**  I should write a blog post reflectign on the first half of the year.
+6. **Blogpost:**  I should write a blog post reflecting on the first half of the year.
