added reading goal

--- a/_posts/2020-11-30-december.md
+++ b/_posts/2020-11-30-december.md
@@ -33,7 +33,7 @@ This is coming from the February post linked above, this was done without COVID 
 
 3. **Running**: Run a full marathon, I again talked about doing this early January, might just get to it.  Lets see!
 
-4. **Boxing**: I did go for classes regularly before the pandemic happened, now going gymmming. Will cut myself some slack on this.
+4. **Boxing**: I did go for classes regularly before the pandemic happened, now going gymming. Will cut myself some slack on this.
 
 5. **Build A Product**: Say Hi to [Fetch](https://app.getfetch.io/)! ✅
 
@@ -49,5 +49,7 @@ beyond the yearly goal. Looking back at the yearly goal, I want to run one more 
 I finally get that smart scale so that I can have body fat related goals later!
 
 3. **Meditate** I barely meditated in November as I stopped tracking it. I want to do at least 15 meditations this month. No material wins here, £50 loss if I don't meditate.
+
+4. **Reading** I want to read Genghis Khan and the Making of The Modern World this month.
 
 Otherwise, I plan on continuing to build Fetch in my free time, maximizing home cooking while I can and travelling at the end of the year. Let's see!
