--- a/_posts/2021-01-31-february.md
+++ b/_posts/2021-01-31-february.md
@@ -27,9 +27,9 @@ Net I broke even. I don't plan on doing penalty cancellation prizes againl.
 
 2. Reading: I plan on finishing The Martian. If I win, I get to buy a book. If I lose I lose 50 pounds.
 
-3. Weight: This was a colossal failure. I'll rework this. I have started by deprecating last years sheet and starting afresh. I am at 63.54 kilos right now. I want  to get to 57 kilos. I'll start small, for this month I'll be happy losing 2 kilos and being at 61.54 at the end of February. I'll record calorioes diligently. If I win I get a smart scale, if I lose I lose 50 pounds.
+3. Weight: This was a colossal failure. I'll rework this. I have started by deprecating last years sheet and starting afresh. I am at 63.54 kilos right now. I want  to get to 57 kilos. I'll start small, for this month I'll be happy losing 2 kilos and being at 61.54 at the end of February. I'll record calories diligently. If I win I get a smart scale, if I lose I lose 50 pounds.
 
-4. Mindfullness: I'll be happy if I do 10 sessions of this. No wins, no losses.
+4. Mindfulness: I'll be happy if I do 10 sessions of this. No wins, no losses.
 
 5. Cycling: I went cycling last weekend and I absolutely loved it! The cycling goal is to do 20k every weekend. No wins, no losses for this month.
 
