added stuff for this month

--- a/_posts/2022-01-02-2021.md
+++ b/_posts/2022-01-02-2021.md
@@ -48,3 +48,26 @@ I'm still figuring out what 2022 should look like, I should have reflected more,
 5. I will definitely be running but I'll add in some gym or boxing. Might surf, more on that later.
 
 6. I want to learn to swim
+
+Above was written on the 2nd of January, I continue writing on the 12th below.
+
+## 2022 Yearly Goals
+
+1. **Running** : Run 1000km, a half marathon, maybe a full marathon
+
+2. **Reading** : 1 book a month minimum
+
+3. **Aquaman** : 2022 is the year when I am comfortable in water. For sure. I'll improve as a swimmer, take classes if I have to and may pick up surfing.
+
+4. **Make Mistakes / Explore**: I don't have metrics for this but I have ideas. Will write about this soon.
+
+
+## January
+
+I have just run 7k so far. I'm lazying and eating crap. I think I need goals to get stuff done. So :-
+
+1. **Running**: Run 100k, 93 left. $50 fine otherwise.
+
+2. **Reading**: Finish reading "Einstein His Life and The Universe"
+
+3. **Weight**: I don't have a weighing machine since I moved. I'll buy one today. Its a great investment. I'll get one from Target today and update my weight first thing tomorrow morning and have a weight goal.
