--- a/_posts/2023-05-13-april-may.md
+++ b/_posts/2023-05-13-april-may.md
@@ -54,7 +54,10 @@ Thanks again Sid for nudging me to write this. I haven't run much since the 1st 
 
 Any readers - please donate [here](https://www.justgiving.com/page/gyani-berlin). This will support a good cause and keep me on track on my goals.
 
+Side - I am trying to get some drums lessons as I now have a set. I am waiting for confirmation from Greenwich music school but if that doesn't come through I'll just go with another teacher nearby. I'll do this by Wednesday tops.
+
 ### FLUPS for this post
 
 1. I need to take the loss on the three losses in March, and I will donate £150 to my own Berlin by the end of week tops
 1. I will now put on shoes, drink some water and go for a run. Hopefully I run a half
+1. I'll update this thread about drums lessons
