add a bullet point about weight

--- a/_posts/2023-05-13-april-may.md
+++ b/_posts/2023-05-13-april-may.md
@@ -46,6 +46,8 @@ Since I have been back from Barcelona I have been relatively healthy. Have run a
 
 **Reading** - I haven't been reading at all in the last few months and I want to start with an easy read to get going. I'll be reading `Brave New World` by `Aldous Huxley` this month. I just bought it on Kindle.
 
+**Weight** - I want to weigh in the 64.x range by the end of the month
+
 Fitness brief - Ideal would be 2 long runs (half marathon adjacent), 3 or 4 visits to the gym and a medium run every week.
 
 The above goals hopefully enforce some amount of discipline when it comes to eating, sleeping & going out on the weekends. In an attempt to eat healthy and eat at home I just bought some more spices & I will start roasting chicken/fish at home with some veggies. For the last three months dinner either has been fried eggs, bread and milk or some takeaway; hoping I can be healthier for the rest of the month. When I am out at work I am trying to get something healthy like Farmer J's & Birleys.
