added a penalty for the weight goal

--- a/_posts/2023-05-13-april-may.md
+++ b/_posts/2023-05-13-april-may.md
@@ -46,7 +46,7 @@ Since I have been back from Barcelona I have been relatively healthy. Have run a
 
 **Reading** - I haven't been reading at all in the last few months and I want to start with an easy read to get going. I'll be reading `Brave New World` by `Aldous Huxley` this month. I just bought it on Kindle.
 
-**Weight** - I want to weigh in the 64.x range by the end of the month
+**Weight** - I want to weigh in the 64.x range by the end of the month. Penalty if I am in the 66.x range or more.
 
 Fitness brief - Ideal would be 2 long runs (half marathon adjacent), 3 or 4 visits to the gym and a medium run every week.
 
