--- a/_posts/2023-05-13-april-may.md
+++ b/_posts/2023-05-13-april-may.md
@@ -60,6 +60,6 @@ Side - I am trying to get some drums lessons as I now have a set. I am waiting f
 
 ### FLUPS for this post
 
-1. I need to take the loss on the three losses in March, and I will donate £150 to my own Berlin by the end of week tops
+1. I need to take the loss on the three losses in March, and I will donate £150 to my own Berlin Marathon fundraiser by the end of week tops
 1. I will now put on shoes, drink some water and go for a run. Hopefully I run a half
 1. I'll update this thread about drums lessons
