update the Apirl post

--- a/_posts/2023-05-13-april-may.md
+++ b/_posts/2023-05-13-april-may.md
@@ -60,6 +60,13 @@ Side - I am trying to get some drums lessons as I now have a set. I am waiting f
 
 ### FLUPS for this post
 
-1. I need to take the loss on the three losses in March, and I will donate £150 to my own Berlin Marathon fundraiser by the end of week tops
-1. I will now put on shoes, drink some water and go for a run. Hopefully I run a half
-1. I'll update this thread about drums lessons
+I need to take the loss on the three losses in March, and I will donate £150 to my own Berlin Marathon fundraiser by the end of week tops
+
+![blog](/img/blog/donation.png)
+
+I will now put on shoes, drink some water and go for a run. Hopefully I run a half
+![blog](/img/blog/run.jpeg)
+
+I'll update this thread about drums lessons
+
+Drums lessons are booked. I have booked 7 lessons until the 16th of July. Did this on the same day of the post
