--- a/_posts/2026-01-01-january-2026.md
+++ b/_posts/2026-01-01-january-2026.md
@@ -54,3 +54,7 @@ That's it. Minimal. Just getting words on the page again.
 
 More soon.
 
+---
+
+*This post was AI-generated and human-reviewed. Sometimes breaking writer's block means letting the machine draft while you steer. It worked.*
+
