--- a/_posts/2026-01-01-january-2026.md
+++ b/_posts/2026-01-01-january-2026.md
@@ -10,7 +10,7 @@ I'm back.
 
 It's been over a year since I last wrote here—a brief California post in September 2024, and before that, July 2023. The writing muscle has atrophied.
 
-2023 and 2024 were the monkey winning. The blog slipped, the running slipped, the eating slipped.
+2023 and 2024 were... complicated. The blog slipped, the eating slipped. But the running? I ran my first full marathons—September 2023 and April 2024—finishing both under 3h41m. I also hit a 1h38m half. Less consistent, yes, but I was running longer than ever before (previously only halves). The monkey wasn't purely winning. Just picking its battles.
 
 2025 was different—consumed by [tabtabtab.ai](https://tabtabtab.ai). Six days a week, thirteen hour days. Hard work, not instant gratification chasing. But the fitness still slipped. The weight crept up. The blog gathered more dust.
 
