--- a/_posts/2026-01-01-january-2026.md
+++ b/_posts/2026-01-01-january-2026.md
@@ -10,11 +10,11 @@ I'm back.
 
 It's been over a year since I last wrote here—a brief California post in September 2024, and before that, July 2023. The writing muscle has atrophied.
 
-2023 and 2024 were... complicated. The blog slipped, the eating slipped. But the running? I ran my first full marathons—September 2023 and April 2024—finishing both under 3h41m. I also hit a 1h38m half. Less consistent, yes, but I was running longer than ever before (previously only halves). The monkey wasn't purely winning. Just picking its battles.
+2023 and early 2024 were active. Not consistent, but I was doing things. The running was there, I ran my first full marathons in September 2023 and April 2024, finishing both under 3h41m. Hit a 1h38m half too. Longer distances than ever before (previously only halves). The monkey wasn't winning. Just less structured.
 
-2025 was different—consumed by [tabtabtab.ai](https://tabtabtab.ai). Six days a week, thirteen hour days. Hard work, not instant gratification chasing. But the fitness still slipped. The weight crept up. The blog gathered more dust.
+Then May 2024 hit and the running slipped fully. The weight started creeping up in late 2024, and 2025 made it worse—consumed by [tabtabtab.ai](https://tabtabtab.ai). Six days a week, thirteen hour days. Hard work, not instant gratification chasing. But the fitness paid the price. The blog gathered more dust.
 
-I want to keep working that hard on meaningful things. But being healthy is the foundation. Can't build long-term if the body falls apart.
+I want to keep working that hard on meaningful things. But being healthy is the foundation. Can't build long-term if the body falls apart. Even with 6x13h days I should find time for fitness.
 
 So here I am. Writing something minimal to break the seal. Deeper posts coming soon.
 
