Add weight update and goal for January
Added personal weight update and goal for January.

--- a/_posts/2026-01-01-january-2026.md
+++ b/_posts/2026-01-01-january-2026.md
@@ -56,3 +56,4 @@ More soon.
 
 *This post was AI-generated and human-reviewed. Sometimes breaking writer's block means letting the machine draft while you steer. It worked.*
 
+Update : It's the 2nd of January. I did weigth myself this morning. It's 73.70. So the goal is to be under 72 by the end of the month. That's a good goal to start with, and I did run 5 kilometers yesterday
